<resources>
    <string name="app_name">Money Cradle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="newAccountIcon">New Account</string>
    <string name="title_activity_new_account">New Account</string>
    <string name="temporary">New account form goes here</string>
    <string name="saveNewAccount">Save New Account</string>
    <string name="cancelNewAccount">Cancel New Account</string>
    <string name="newTransaction">New Transaction</string>
    <string name="title_activity_new_transaction">New Transaction</string>
    <string name="saveNewTransaction">Save New Transaction</string>
    <string name="cancelNewTransaction">Cancel New Transaction</string>
    <string name="Name">Name</string>
    <string name="hint1">Enter account name</string>
    <string name="accountType">Account Type</string>
    <string name="openAmount">Opening Amount</string>
    <string name="note">Note</string>
    <string name="anyOther">other details</string>
    <string name="anyOtherTx">any other transaction details</string>
    <string name="acType">Account Type</string>
    <string name="account">Account</string>
    <string name="project">Project</string>
    <string name="payee">Payee</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="title_activity_edit_transaction">Edit Transaction</string>
    <string name="default_open_amount">0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="txaccountName">Account:</string>
    <string name="payee2">Payee: </string>
    <string name="amount1">Amount: </string>
    <string name="category1">Category:  </string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="noTransactions">Click +t above to add transaction</string>
    <string name="tx_type">Transaction Type</string>
    <string name="totalAmountView">Total :</string>
    <string name="title_activity_view_account_history">Account History</string>
    <string name="dateCreated">Date Created:  </string>
    <string name="accountName">Account Name:  </string>
    <string name="accountType2">Account Type:  </string>
    <string name="openningBalance">Opening Bal:</string>
    <string name="accountNOte">Note:</string>
    <string name="accountbal">Current Bal:</string>
    <string name="action_Backup">Backup Database</string>
    <string name="action_Restore">Restore Database</string>
    <string name="action_Help">Help</string>
    <string name="addAccount1">Click </string>
    <string name="addAccount2"> to add account</string>
    <string name="addTx1">Click </string>
    <string name="addTx2"> to add transaction</string>
    <string name="title_activity_help">Help</string>
    <string name="help_new_account">Add new account</string>
    <string name="help_image">image</string>
    <string name="help_addAccountClick">- Click \'+a\' in action bar</string>
    <string name="help_fillForm">- Fill in form in the \'New Account\' screen</string>
    <string name="help_clickSave">- Click save to save account or \'X\' to cancel</string>
    <string name="help_new_tx">Add new transaction</string>
    <string name="help_addTxClick">- Click \'+t\' in action bar</string>
    <string name="help_fillFormTx">- Fill in form in the \'New Transaction\' screen</string>
    <string name="help_interactAccount">Interact with account</string>
    <string name="help_clickAc">- Click any account from the accounts\' list in the ACCOUNTS Tab</string>
    <string name="help_clickAcInt">- Select an option in the dialog </string>
    <string name="help_clickTxInt">- Select an option in the dialog </string>
    <string name="help_clickTx">- Click any transaction from the transactions\' list in the HISTORY Tab</string>
    <string name="help_interactTx">Interact with transaction</string>
    <string name="title_activity_financial_statement">Financial Statement</string>
    <string name="Title">Personal Financial Statement</string>
    <string name="cashFlow">Cashflow</string>
    <string name="totIncome">Total Income : </string>
    <string name="totExpense">Total Expenses : </string>
    <string name="sup">Surplus :</string>
    <string name="assetLabel">Assets :</string>
    <string name="liabilityLabel">Liabilities :</string>
    <string name="cashLabel">Cash :</string>
    <string name="bankLabel">Bank :</string>
    <string name="conclusionB">You are in a good financial position.</string>
    <string name="yourTotal">Your total is :</string>
    <string name="fPosition">Financial Position</string>
    <string name="transfer">Transfer Money</string>
    <string name="conclusion">Your cashflow is NEGATIVE because you are spending more than you earn!</string>
    <string name="category_name">Category Name</string>
    <string name="title_activity_rmain">RMainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string-array name="drawerItems">
        <item>Home</item>
        <item>Planned</item>
        <item>Categories</item>
        <item>Payees</item>
        <item>Projects</item>
        <item>Closed Accounts</item>
    </string-array>
    <string-array name="bottomDrawerItems">
        <item>Make a suggestion</item>
        <item>Tell a friend</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>
    <string-array name="accountsListDialog">
        <item>View Account Info</item>
        <item>New Transaction</item>
        <item>New Transfer</item>
        <item>Account Overview</item>
        <item>Edit Account</item>
        <item>Close Account</item>
        <item>Delete Account</item>
    </string-array>
    <string-array name="transactionsListDialog">
        <item>View Details</item>
        <item>Edit Transaction</item>
        <item>Delete Transaction</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="finTxListDialog">
        <item>View Details</item>
        <item>Delete</item>
    </string-array>
    <string-array name="pendingTxListDialog">
        <item>View Details</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="reportsFragmentList">
        <item>General</item>
        <item>By Accounts</item>
        <item>By Categories</item>
        <item>By Payees</item>
        <item>By Projects</item>
        <item>By Account / Period</item>
        <item>By Category / Period</item>
        <item>By Payee / Period</item>
        <item>By Project / Period</item>
        <item>Full Report (Text)</item>
        <item>Export to Spreadsheet</item>
    </string-array>
    <string-array name="categoryListItems">
        <item>Rename</item>
        <item>Delete</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="reportsSpinner2Items">
        <item>Income</item>
        <item>Expense</item>
        <item>Income vs Expense</item>
    </string-array>
    <string-array name="reportsSpinner3Items">
        <item>Bar Graph</item>
        <item>Pie Chart</item>
    </string-array>
    <string-array name="reportsSpinner4Items">
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string-array name="projectListItems">
        <item>View Project Info</item>
        <item>Edit Project</item>
        <item>End Project</item>
        <item>Delete Project</item>
    </string-array>
    <string name="deleteDialogTitle">Delete?</string>
    <string name="deleteDialogMessage">Account will be deleted with all its transactions</string>
    <string name="proceed">Proceed?</string>
    <string name="closeDialogTitle">Close?</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="closeDialogMessage">Account transactions will remain in \'History\' but the account will be inaccessible</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonToggleSign">+/-</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonEquals">=</string>
    <string name="buttonClear">C</string>
    <string name="buttonClearMemory">MC</string>
    <string name="buttonAddToMemory">M+</string>
    <string name="buttonSubtractFromMemory">M-</string>
    <string name="buttonRecallMemory">MR</string>
    <string name="pref_localeInfo_title">LOCALE</string>
    <string name="pref_country">Select country</string>
    <string name="pref_currency">Select currency</string>
    <string name="pref_privacy_title">PRIVACY</string>
    <string name="pref_PIN_authorisation">PIN Authorisation</string>
    <string name="pref_PIN_summary">Allow access using PIN</string>
    <string name="pref_enter_PIN">Enter PIN</string>
    <string name="pref_enter_PIN_dialog_message">Enter 4 digit PIN</string>
    <string name="pref_general_settings_title">General Settings</string>
    <string name="pref_daily_reminder">Daily Reminder</string>
    <string name="pref_daily_reminder_summary">Remind me to enter the day\'s transactions</string>
    <string name="pref_set_time">Set time</string>
    <string name="pref_history_start_date_title">Set start date for History</string>
    <string name="pref_set_date">Set Date</string>
    <string name="pref_history_start_date_summary">Set start date for transaction history</string>
    <string name="help_title_one">How To Use Money Cradle</string>
    <string name="help_title_two">FAQs</string>
    <string name="help_topic_one">About Money Cradle</string>
    <string name="help_topic_two">Quick Overview</string>
    <string name="help_topic_three">Additional Features</string>
    <string name="help_question_one">What is an Account?</string>
    <string name="help_question_two">How do I change currency used?</string>
    <string name="help_question_three">What is a payee?</string>
    <string name="help_question_four">What are account types?</string>
    <string name="help_question_five">Some features no longer working?</string>
    <string name="pref_use_custom_currency">Use custom currency</string>
    <string name="pref_use_custom_currency_summary">Select this if your currency is not available in above currencies</string>
    <string name="create_custom_currency">Create your currency</string>
    <string name="whatsnew">What\'s new</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="scheduled">Planned Transactions</string>
    <string name="categories">Categories</string>
    <string name="payees">Payees</string>
    <string name="projects_drawer">Projects</string>
    <string name="closed_accounts">Closed Accounts</string>
    <string name="make_suggestion">Contact Us</string>
    <string name="tell_a_friend">Tell a friend</string>
    <string name="help">Help</string>
    <string name="statistics">Statistics</string>
    <string name="success_academy">Success Academy</string>
</resources>