<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />


        <item
            android:id="@+id/navigation_item_statistics"
            android:checked="true"
            android:icon="@drawable/ic_pie_chart"
            android:title="@string/statistics" />


        <item
            android:id="@+id/navigation_item_scheduled"
            android:icon="@drawable/ic_planned"
            android:title="@string/scheduled" />

        <item
            android:id="@+id/navigation_success_academy"
            android:icon="@drawable/ic_trending_up"
            android:title="@string/success_academy" />

        <item
            android:id="@+id/navigation_item_projects"
            android:icon="@drawable/ic_folder"
            android:title="@string/projects_drawer" />


        <item
            android:id="@+id/navigation_item_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/categories" />

        <item
            android:id="@+id/navigation_item_payees"
            android:icon="@drawable/ic_payeee"
            android:title="@string/payees" />


        <item
            android:id="@+id/navigation_item_closed_accounts"
            android:icon="@drawable/ic_lock"
            android:title="@string/closed_accounts" />


    </group>


    <group android:id="@+id/theRest">

        <item
            android:id="@+id/navigation_item_settings"

            android:title="@string/settings" />


        <item
            android:id="@+id/navigation_item_make_a_suggestion"

            android:title="@string/make_suggestion" />
        <item
            android:id="@+id/navigation_item_tell_a_friend"

            android:title="@string/tell_a_friend" />

        <item
            android:id="@+id/navigation_item_help"

            android:title="@string/help" />


        <item
            android:id="@+id/footer_spacer_1"
            android:checkable="false"
            android:enabled="false"
            android:orderInCategory="200"
            android:title="" />


    </group>


</menu>